[project]
name = "chatbot-api"
version = "0.1"
dependencies = [
    "asyncio==3.4.3",
    "fastapi==0.115.5",
    "langchain==0.3.8",
    "langchain-openai==0.2.9",
    "langchainhub==0.1.21",
    "neo4j==5.26.0",
    "numpy==1.26.4",
    "openai==1.55.0",
    "opentelemetry-api==1.28.2",
    "pydantic==2.10.0",
    "uvicorn==0.32.1",
    "langchain_community==0.3.7"
]

[project.optional-dependencies]
dev = ["black", "flake8"]